Service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/sclorg/django-ex.git
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: django
    app.kubernetes.io/component: django
    app.kubernetes.io/instance: django
    app.kubernetes.io/name: django
    app.kubernetes.io/part-of: python
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.9-ubi8
  name: django
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: django
    deployment: django
  sessionAffinity: None
  type: ClusterIP
